--- a/results/02_feature_cpg_status.Rmd
+++ b/results/02_feature_cpg_status.Rmd
@@ -28,7 +28,6 @@ It happends in 2 steps :
 
 
 ```{r}
-
 feat_cpg = readRDS("~/projects/01_momik/results/feats_epic_grch38.rds")
 head(feat_cpg)
 dim(feat_cpg)
@@ -58,7 +57,20 @@ feats_filename = paste0("feats_", up_str, "_", dwn_str, ".rds")
 hg38_chrom_sizes  = read.table("~/projects/genes/hg38.chrom.sizes", stringsAsFactors=FALSE)
 rownames(hg38_chrom_sizes) = hg38_chrom_sizes[,1]
 
+```
 
+```{r fig.height=9}
+layout(matrix(c(3,1,1,3,1,1, 4,2,2), 3), respect=TRUE)
+plot(feat_cpg$score, feat_cpg$len, pch=".")
+den = density(feat_cpg$len)
+plot(den$y, den$x, type="l")
+den2 = density(feat_cpg$score)
+plot(den2$x, den2$y, type="l")
+
+
+```
+
+```{r sequences}
 
 library(BSgenome)
 if (!file.exists(feats_filename)) {
