--- a/results/02_feature_cpg_status.Rmd
+++ b/results/02_feature_cpg_status.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "CpG status of probes aggregate"
-author: "Florent Chuffart"
+author: "Florence Pittion, Florent Chuffart"
 date: "`r Sys.Date()`"
 output: 
   rmarkdown::html_document:
@@ -20,76 +20,81 @@ knitr::opts_chunk$set(collapse=TRUE, comment = "#>", fig.width=9, fig.height=6, 
 
 The main goal of this study is to define Cpg Islands in probes aggregate in genome.
 
-It happends in 2 steps : 
+It happends in 2 steps: 
   
   - aggregate genome sequence
   - count the number of CG in the sequence
 
 
+# Features
 
-```{r}
-feat_cpg = readRDS("~/projects/01_momik/results/feats_epic_grch38.rds")
+```{r label="Extract features lenght"}
+feat_filename = "~/projects/01_momik/results/feats_epic_grch38.rds"
+feat_cpg = readRDS(feat_filename)
 head(feat_cpg)
 dim(feat_cpg)
-```
-# Features
-```{r label="Extract features lenght"}
-#feat_filename=paste0("feat_cpg_status.rds")
 
 feat_cpg$len=(feat_cpg[,3]-feat_cpg[,2])
 
-plot(density(feat_cpg$len), xlim=c(0,5000))
-plot(density(feat_cpg$score))
-#barplot(feat_cpg$len)
-table(feat_cpg$strand)
-table(feat_cpg$score)
-#barplot(feat_cpg$score)
-plot(feat_cpg$len~feat_cpg$score)
-den = density(feat_cpg$len)
-plot(den$y, den$x, type="l")
-#distribution marginale x y
-
-
 ud_str = 2500
 up_str = dwn_str = ud_str
-feats_filename = paste0("feats_", up_str, "_", dwn_str, ".rds")
-
-hg38_chrom_sizes  = read.table("~/projects/genes/hg38.chrom.sizes", stringsAsFactors=FALSE)
-rownames(hg38_chrom_sizes) = hg38_chrom_sizes[,1]
-
 ```
 
-```{r marginals, fig.height=9}
-layout(matrix(c(3,1,1,3,1,1,4,2,2), 3), respect=TRUE)
-plot(feat_cpg$score, feat_cpg$len, pch=".")
-den = density(feat_cpg$len)
-plot(den$y, den$x, type="l")
-den2 = density(feat_cpg$score)
-plot(den2$x, den2$y, type="l")
+
+# Descriptive Statistics
+
+```{r marginals_full, fig.height=9}
+xlim = range(feat_cpg$len)
+ylim = range(feat_cpg$score)
+layout(matrix(c(2,1,1,2,1,1,4,3,3), 3), respect=TRUE)
+# plot(feat_cpg$len, feat_cpg$score, pch=".", xlim=xlim, ylim=ylim)
+smoothScatter (feat_cpg$len, feat_cpg$score, xlim=xlim, ylim=ylim)
+den_x = density(feat_cpg$len)
+plot(den_x$x, den_x$y, type="l", xlim=xlim)
+den_y = density(feat_cpg$score)
+# den_y = density(feat_cpg$score, breaks=c(-1, seq(min(ylim), max(ylim)), max(feat_cpg$score)+1))
+plot(den_y$y, den_y$x, type="l", ylim=ylim)
 ```
+
+
+```{r marginals_xlim, fig.height=9}
+xlim = c(0,10000)
+ylim = c(0,30)
+layout(matrix(c(2,1,1,2,1,1,4,3,3), 3), respect=TRUE)
+# plot(feat_cpg$len, feat_cpg$score, pch=".", xlim=xlim, ylim=ylim)
+smoothScatter (feat_cpg$len, feat_cpg$score, xlim=xlim, ylim=ylim)
+den_x = density(feat_cpg$len)
+plot(den_x$x, den_x$y, type="l", xlim=xlim)
+den_y = density(feat_cpg$score)
+# den_y = density(feat_cpg$score, breaks=c(-1, seq(min(ylim), max(ylim)), max(feat_cpg$score)+1))
+plot(den_y$y, den_y$x, type="l", ylim=ylim)
+```
+
+
+
+## feat_cpg_centered
+
+```{r feat_cpg_centered}
+feat_cpg_centered = feat_cpg
+feat_cpg_centered$mid =  feat_cpg_centered$start + floor(feat_cpg_centered$len/2)
+feat_cpg_centered$start = feat_cpg_centered$maxcpgden - ud_str
+feat_cpg_centered$end = feat_cpg_centered$maxcpgden + ud_str
+head(feat_cpg_centered)
+saveRDS(feat_cpg_centered, file = "feat_cpg_centered.rds")
+```
+
 
 ```{r sequences}
-
 library(BSgenome)
 if (!file.exists(feats_filename)) {
-  feats = epimedtools::monitored_apply(mod=10, feat_cpg, 1, function(gene) {
+  feats = epimedtools::monitored_apply(mod=10, feat_cpg_centered, 1, function(gene) {
     chr = gene[[1]]
     strand = gene[[6]]
     start = as.numeric(gene[[2]])
-    len = as.numeric(gene[[7]])
-    mid = start + floor(len/2)
-    if (strand == "+") {
-      cen = mid
-      bef = up_str
-      aft = dwn_str
-    } else {
-      cen = mid
-      bef = dwn_str
-      aft = up_str
-    }  
-    beg = max(1,cen - bef)
-    end = min(hg38_chrom_sizes[chr,2], cen + aft)
-    str = as.character(BSgenome::getSeq(BSgenome.Hsapiens.UCSC.hg38::Hsapiens, chr, beg, end))
+    end = as.numeric(gene[[3]])
+    beg = max(1,start)
+    end2 = min(hg38_chrom_sizes[chr,2], end)
+    str = as.character(BSgenome::getSeq(BSgenome.Hsapiens.UCSC.hg38::Hsapiens, chr, beg, end2))
     return(str)
   })
   saveRDS(feats, feats_filename)
