--- a/results/02_feature_cpg_status.Rmd
+++ b/results/02_feature_cpg_status.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "CpG status of probes aggregate"
+title: "CpG status of probes aggregate reduced, slice 250pb"
 author: "Florence Pittion, Florent Chuffart"
 date: "`r Sys.Date()`"
 output: 
@@ -14,6 +14,13 @@ output:
 
 ```{r, echo=FALSE, eval=TRUE, label="loading libraries"}
 knitr::opts_chunk$set(collapse=TRUE, comment = "#>", fig.width=9, fig.height=6, eval=TRUE, echo=FALSE, results="hide")
+```
+
+```{r params}
+step = 100
+nb_rnd_feat = 0
+ud_str = 2500
+up_str = dwn_str = ud_str
 ```
 
 # Purpose
@@ -31,44 +38,57 @@ It happends in 2 steps:
 ```{r label="Extract features lenght"}
 feat_filename = "~/projects/01_momik/results/feats_epic_grch38.rds"
 feat_cpg = readRDS(feat_filename)
+feat_cpg$len=(feat_cpg[,3]-feat_cpg[,2])
 head(feat_cpg)
 dim(feat_cpg)
-
-feat_cpg$len=(feat_cpg[,3]-feat_cpg[,2])
-
-ud_str = 2500
-up_str = dwn_str = ud_str
 ```
 
 
 # Descriptive Statistics
 
 ```{r marginals_full, fig.height=9}
-xlim = range(feat_cpg$len)
-ylim = range(feat_cpg$score)
-layout(matrix(c(2,1,1,2,1,1,4,3,3), 3), respect=TRUE)
-# plot(feat_cpg$len, feat_cpg$score, pch=".", xlim=xlim, ylim=ylim)
-smoothScatter (feat_cpg$len, feat_cpg$score, xlim=xlim, ylim=ylim)
-den_x = density(feat_cpg$len)
-plot(den_x$x, den_x$y, type="l", xlim=xlim)
-den_y = density(feat_cpg$score)
-# den_y = density(feat_cpg$score, breaks=c(-1, seq(min(ylim), max(ylim)), max(feat_cpg$score)+1))
-plot(den_y$y, den_y$x, type="l", ylim=ylim)
-```
+plot_feat_den = function (x, y, xlim, ylim) {
+  if (missing(xlim)) {
+    xlim = range(x)    
+  }
+  if (missing(ylim)) {
+    ylim = range(y)    
+  }
+  layout(matrix(c(2,1,1,2,1,1,4,3,3), 3), respect=TRUE)
+  # plot(x, y, pch=".", xlim=xlim, ylim=ylim)
+  smoothScatter (x, y, xlim=xlim, ylim=ylim)
+  den_x = density(x)
+  plot(den_x$x, den_x$y, type="l", xlim=xlim)
+  den_y = density(y)
+  # den_y = density(y, breaks=c(-1, seq(min(ylim), max(ylim)), max(y)+1))
+  plot(den_y$y, den_y$x, type="l", ylim=ylim)  
+}
+plot_feat_den(feat_cpg$len, feat_cpg$score)
 
-
-```{r marginals_xlim, fig.height=9}
 xlim = c(0,10000)
 ylim = c(0,30)
-layout(matrix(c(2,1,1,2,1,1,4,3,3), 3), respect=TRUE)
-# plot(feat_cpg$len, feat_cpg$score, pch=".", xlim=xlim, ylim=ylim)
-smoothScatter (feat_cpg$len, feat_cpg$score, xlim=xlim, ylim=ylim)
-den_x = density(feat_cpg$len)
-plot(den_x$x, den_x$y, type="l", xlim=xlim)
-den_y = density(feat_cpg$score)
-# den_y = density(feat_cpg$score, breaks=c(-1, seq(min(ylim), max(ylim)), max(feat_cpg$score)+1))
-plot(den_y$y, den_y$x, type="l", ylim=ylim)
+plot_feat_den(feat_cpg$len, feat_cpg$score, xlim, ylim)
 ```
+
+# Feature selection
+
+```{r feat reduce, fig.height=9}
+# Filtering according to...
+# feat_cpg = feat_cpg[
+#   # feat_cpg$score>5 &
+#   feat_cpg$len<5000
+#   ,]
+# plot_feat_den(feat_cpg$len, feat_cpg$score, xlim, ylim)
+
+# Downsampling
+if (nb_rnd_feat > 0) {
+  dim(feat_cpg)
+  set.seed(1)
+  feat_cpg = feat_cpg[sort(sample(1:nrow(feat_cpg), min(nrow(feat_cpg), nb_rnd_feat))),]
+  dim(feat_cpg)  
+}
+```
+
 
 ## feat_cpg_centered
 
@@ -83,7 +103,7 @@ saveRDS(feat_cpg_centered, file = "feat_cpg_centered.rds")
 
 
 ```{r seq_cpg_centered}
-seq_filename = "seq_cpg_centered.rds"
+seq_filename = paste0("seq_cpg_centered_", nb_rnd_feat, "_.rds")
 hg38_chrom_sizes  = read.table("~/projects/genes/hg38.chrom.sizes", stringsAsFactors=FALSE)
 rownames(hg38_chrom_sizes) = hg38_chrom_sizes[,1]
 
@@ -107,12 +127,11 @@ head(seq)
 ```
 
 
-```{r label="slice seq and count CpG"}
-step = 250
+```{r mat_cpg_centered}
 mat_filename = paste0("mat_cpg_centered_", up_str, "_", dwn_str, "_", step, ".rds")
 foo = seq(1,(2*ud_str), step)
 bins = cbind(foo, foo+step-1)
-if (!file.exists(mat_filename)) {
+# if (!file.exists(mat_filename)) {
   mat = t(epimedtools::monitored_apply(t(t(seq)), 1, function(s) {
     apply(bins, 1, function(b) {
       # b = bins[1,]
@@ -127,9 +146,9 @@ if (!file.exists(mat_filename)) {
       }
     })
   }))
-  saveRDS(mat, mat_filename)
-}
-mat = readRDS(mat_filename)
+#   saveRDS(mat, mat_filename)
+# }
+# mat = readRDS(mat_filename)
 head(mat)
 dim(mat)
 
@@ -140,7 +159,19 @@ head(binmax)
 feat_cpg_centered$binmax = NA
 feat_cpg_centered[names(binmax),]$binmax = binmax
 head(feat_cpg_centered)
+```
 
+## Heatmap
+
+```{r hm_cpg_centered, fig.height=9}
+data = mat[order(binmax[rownames(mat)]),]
+data = data[sort(sample(1:nrow(data), min(nrow(data), 1000))), ]
+colors=c("black",  "red")
+cols = colorRampPalette(colors)(20)
+offset = (bins[,2] - ud_str - step/2)/1000
+colnames(data) = paste0("binmax ", ifelse(offset<0, "-", "+"), abs(offset), "kb")
+rownames(data) = NULL
+gplots::heatmap.2(data, Rowv=NULL,  Colv=NULL,  dendrogram="none", trace="none", col=cols, main=paste0("CpG enrichment (feats +/-", ud_str/1000, "kb, 100 rnd genes)"), xaxt="n", mar=c(8,5))
 ```
 
 
@@ -162,7 +193,7 @@ saveRDS(feat_cpg_binmax, file = "feat_cpg_feat_cpg_binmax.rds")
 
 
 ```{r seq_cpg_binmax}
-seq_filename = "seq_cpg_binmax.rds"
+seq_filename = paste0("seq_cpg_binmax_", nb_rnd_feat, "_.rds")
 hg38_chrom_sizes  = read.table("~/projects/genes/hg38.chrom.sizes", stringsAsFactors=FALSE)
 rownames(hg38_chrom_sizes) = hg38_chrom_sizes[,1]
 
@@ -186,12 +217,13 @@ head(seq)
 ```
 
 
+ 
+
 ```{r mat_cpg_binmax}
-step = 250
 mat_filename = paste0("mat_cpg_binmax_", up_str, "_", dwn_str, "_", step, ".rds")
 foo = seq(1,(2*ud_str), step)
 bins = cbind(foo, foo+step-1)
-if (!file.exists(mat_filename)) {
+# if (!file.exists(mat_filename)) {
   mat = t(epimedtools::monitored_apply(t(t(seq)), 1, function(s) {
     apply(bins, 1, function(b) {
       # b = bins[1,]
@@ -206,51 +238,34 @@ if (!file.exists(mat_filename)) {
       }
     })
   }))
-  saveRDS(mat, mat_filename)
-}
-mat = readRDS(mat_filename)
+#   saveRDS(mat, mat_filename)
+# }
+# mat = readRDS(mat_filename)
 head(mat)
 dim(mat)
+
+binmax = apply(mat, 1, function(l) {
+  maxIndex = which(l==max(l))[1]
+})
+head(binmax)
+feat_cpg_centered$binmax = NA
+feat_cpg_centered[names(binmax),]$binmax = binmax
+head(feat_cpg_centered)
+
 ```
 
-
-
-
-
-
-
-
-
-# CpG enrichment of TSS 
-
-CpG density (#CpP / length of sequence) is computed in sequence of TSS +/-`r ud_str/1000`kb sliced into `r step`b bins.
-
-TSS of 1000 random genes is represented there. It shows a CpG enrichment aoroud TSS.
-
-```{r label="heatmap for 1000 rnd genes"}
-set.seed(1)
-data = mat[sample(rownames(mat), 1000),]
-# cor clust
-tmp_d = t(data)
-tmp_d = cor(tmp_d, method="pe")
-hc_row = hclust(dist(1 - tmp_d), method="complete")
-Rowv = as.dendrogram(hc_row)
-dendrogram="row"      
-
+```{r hm_cpg_binmax, fig.height=9}
+data = mat[order(binmax[rownames(mat)]),]
+data = data[sort(sample(1:nrow(data), min(nrow(data), 1000))), ]
 colors=c("black",  "red")
 cols = colorRampPalette(colors)(20)
 offset = (bins[,2] - ud_str - step/2)/1000
-colnames(data) = paste0("TSS ", ifelse(offset<0, "-", "+"), abs(offset), "kb")
+colnames(data) = paste0("binmax ", ifelse(offset<0, "-", "+"), abs(offset), "kb")
 rownames(data) = NULL
-gplots::heatmap.2(data, Rowv=Rowv, Colv=NULL, dendrogram="none", trace="none", col=cols, main=paste0("CpG enrichment (TSS +/-", ud_str/1000, "kb, 1000 rnd genes)"), xaxt="n", mar=c(8,5))
+gplots::heatmap.2(data, Rowv=NULL,  Colv=NULL,  dendrogram="none", trace="none", col=cols, main=paste0("CpG enrichment (feats +/-", ud_str/1000, "kb, 100 rnd genes)"), xaxt="n", mar=c(8,5))
 ```
 
-
-CpG density distribution is represented there. 
-
-It shows that MOST OF TSS are CpG enriched compared to random sequence.  
-
-It also shows that NOT ALL TSS are are CpG enriched.
+# PCA
 
 ```{r label="CpG density distribution"}
 nb_cpg_rnd_filename = paste0("nb_cpg_rnd_TSS_", up_str, "_", dwn_str, ".rds")
@@ -292,11 +307,6 @@ legend("topright", c(paste0("tss +/-", ud_str/1000, "kb"), paste0("rnd pos +/-",
 ```
 
 
-Then we clustering TSS according to there sliced CpG density
-
-PCA on TSS +/-`r ud_str/1000`kb sliced into `r step`b bins is performed.
-
-Component 1 discriminates CpG rich and poor TSS.
 
 ```{r label="PCA on mat"}
 mat = mat[!apply(is.na(mat), 1, any),] 
@@ -304,51 +314,72 @@ pca = prcomp(mat, scale=FALSE)
 v = pca$sdev * pca$sdev
 p = v / sum(v) * 100
 
-layout(matrix(1:2,1), respect=TRUE)
+layout(matrix(1:4,2), respect=TRUE)
 barplot(p)
+
+cols = 1
+i = 3
+j = 2
+plot(pca$x[,i], pca$x[,j], xlab=paste0("PC", i, "(", signif(p[i], 3), "%)"), ylab=paste0("PC", j, "(", signif(p[j], 3), "%)"), pch=16, col=cols)
+
 i = 1
+j = 3
+plot(pca$x[,i], pca$x[,j], xlab=paste0("PC", i, "(", signif(p[i], 3), "%)"), ylab=paste0("PC", j, "(", signif(p[j], 3), "%)"), pch=16, col=cols)
+
+i = 1
+j = 2
+plot(pca$x[,i], pca$x[,j], xlab=paste0("PC", i, "(", signif(p[i], 3), "%)"), ylab=paste0("PC", j, "(", signif(p[j], 3), "%)"), pch=16, col=cols)
+
+layout(matrix(1:4,2, byrow=TRUE), respect=TRUE)
+i=1
+threshs = quantile(pca$x[,i], c(1/3, 2/3))
 plot(density(pca$x[,i]), main=paste0("PC", i, "(", signif(p[i], 3), "%)"))
-abline(v=-0.04)
+abline(v=threshs)
 
-idx = pca$x[,1] < -0.04
+idx1 = pca$x[,1] <  threshs[1]
+idx2 = pca$x[,1] >= threshs[1] & pca$x[,2] < threshs[2]
+idx3 = pca$x[,1] >= threshs[2] & pca$x[,2] <  threshs[2] 
 
-plot(apply(mat[idx,], 2, mean), type="l", ylim=c(0, .13), col=1, main="CpG enrichment", xaxt="n")
-lines(apply(mat[!idx,], 2, mean), col=2)
+plot(apply(mat[idx1,], 2, mean),  col=1, type="l", ylim=c(0, .13), main="CpG enrichment", xaxt="n")
+lines(apply(mat[idx2,], 2, mean), col=2)
+lines(apply(mat[idx3,], 2, mean), col=4)
 axis(1, at=c(0, ncol(mat)/2, ncol(mat)), label=c(paste0("TSS -", ud_str/1000, "kb"), "TSS", paste0("TSS +", ud_str/1000, "kb")))
-legend("topright", legend=c(paste0(sum(idx), " genes"), paste0(sum(!idx), " genes")), col=1:2, lty=1)
-
-
-# layout(matrix(1:6,2), respect=TRUE)
-# for(i in 1:6) {
-#   barplot(pca$rotation[,i], main=paste("contrib PC",i))
-# }
-
-# layout(matrix(1:2,1), respect=TRUE)
-# i=1
-# j=2
-# plot(pca$x[,i], pca$x[,j], xlab=paste0("PC", i, "(", signif(p[i], 3), "%)"), ylab=paste0("PC", j, "(", signif(p[j], 3), "%)"), pch=16, col=adjustcolor(1, alpha.f=0.05),
-#   main=paste0("PCA (TSS +/-", ud_str/1000, "kb, ", nrow(mat), " genes)")
-# )
-# i=1
-# j=3
-# plot(pca$x[,i], pca$x[,j], xlab=paste0("PC", i, "(", signif(p[i], 3), "%)"), ylab=paste0("PC", j, "(", signif(p[j], 3), "%)"), pch=16, col=adjustcolor(1, alpha.f=0.05),
-#   main=paste0("PCA (TSS +/-", ud_str/1000, "kb, ", nrow(mat), " genes)")
-# )
-
-genes_grch38$tss_cpg_status  = NA
-genes_grch38[names(idx)[!idx],]$tss_cpg_status = "cpg_rich"
-genes_grch38[names(idx)[idx],]$tss_cpg_status = "cpg_poor"
-table(genes_grch38$tss_cpg_status)
-genes_grch38$cpg_density = NA
-genes_grch38[rownames(mat),]$cpg_density = apply(mat, 1, mean)
-saveRDS(genes_grch38, "~/projects/genes/bed_grch38_epimeddb.rds")
-WriteXLS::WriteXLS(genes_grch38, "genes_grch38_cpg_status.xls")
 ```
+
+
+
+
+```{r hm_pop, fig.height=9}
+idx = c(
+  names(idx1)[idx1],
+  names(idx2)[idx2],
+  names(idx3)[idx3]
+)
+idx = rownames(pca$x)[order(pca$x[,1])]
+data = mat[idx,]
+data = data[sort(sample(1:nrow(data), min(nrow(data), 1000))), ]
+colors=c("black",  "red")
+cols = colorRampPalette(colors)(20)
+offset = (bins[,2] - ud_str - step/2)/1000
+colnames(data) = paste0("binmax ", ifelse(offset<0, "-", "+"), abs(offset), "kb")
+rownames(data) = NULL
+gplots::heatmap.2(data, Rowv=NULL,  Colv=NULL,  dendrogram="none", trace="none", col=cols, main=paste0("CpG enrichment (feats +/-", ud_str/1000, "kb, 100 rnd genes)"), xaxt="n", mar=c(8,5))
+
+
+plot(pca$x[,1], feat_cpg[rownames(pca$x), ]$score)
+```
+
+
+# Improvement
+
+Long features (> 5000bp) could be splited into subfeatures centrered on CpG bumps.
+
+Notice that 5000bp feature could overlap an other feature.
+
 
 # Session Information
 
 ```{r, results="verbatim"}
 sessionInfo()
 ```
-
 
