--- a/results/02_feature_cpg_status.Rmd
+++ b/results/02_feature_cpg_status.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "CpG status of probes aggregate reduced, slice 250pb"
+title: "CpG status of probes aggregate reduced, slice 100pb"
 author: "Florence Pittion, Florent Chuffart"
 date: "`r Sys.Date()`"
 output: 
@@ -454,6 +454,40 @@ for (j in 2:3) {
     }
   }  
 }
+```
+
+# sortie feat_cpg_binmax
+
+```{r}
+idx = pca$x[,1] > quantile(pca$x[,1], probs = seq(0, 1, 1/3))[[2]]
+
+feat_cpg_binmax$feat_cpg_status  = NA
+feat_cpg_binmax[names(idx)[!idx],]$feat_cpg_status = "cpg_rich"
+feat_cpg_binmax[names(idx)[idx],]$feat_cpg_status = "cpg_poor"
+table(feat_cpg_binmax$feat_cpg_status)
+feat_cpg_binmax$cpg_density = NA
+feat_cpg_binmax[rownames(mat),]$cpg_density = apply(mat, 1, mean)
+feat_cpg_binmax$start = feat_cpg_binmax$start + ud_str
+feat_cpg_binmax$end = feat_cpg_binmax$start + 1
+
+feat_filename_status = "~/projects/01_momik/results/feats_epic_grch38_cpg_status.rds"
+
+saveRDS(feat_cpg_binmax, feat_filename_status)
+WriteXLS::WriteXLS(feat_cpg_binmax, "feats_epic_grch38_cpg_status.xls")
+```
+
+# heatmap cpg rich
+
+```{r hm_pop2, fig.height=9}
+idx = pca$x[,1] < quantile(pca$x[,1], probs = seq(0, 1, 1/3))[[2]]
+data = mat[idx,]
+data = data[sort(sample(1:nrow(data), min(nrow(data), 1000))), ]
+colors=c("black",  "red")
+cols = colorRampPalette(colors)(20)
+offset = (bins[,2] - ud_str - step/2)/1000
+colnames(data) = paste0("binmax ", ifelse(offset<0, "-", "+"), abs(offset), "kb")
+rownames(data) = NULL
+gplots::heatmap.2(data, Rowv=NULL,  Colv=NULL,  dendrogram="none", trace="none", col=cols, main=paste0("CpG enrichment (feats +/-", ud_str/1000, "kb, 1000 rnd genes)"), xaxt="n", mar=c(8,5))
 ```
 
 
